added a link "signature"

--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@
       </div>
     </div>
   </div>
+  <p class="signature">
+    <a href="https://github.com/ksushabond/my-weather-app">
+    Open-source code
+  </a> by Ksushabond
+  </p>
 <script src="src/index.js"></script>
   </body>
 </html>
